<resources>
    <string name="app_name">TeamUp</string>
    <string name="moto_text">Let the games begin! </string>
    <string name="welcome_events_list_link">Your teammates are waiting for you! Click here and...</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <!-- Buttons -->
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_link_to_login">Already signed up? Sign In now!</string>
    <string name="btn_link_to_register">Not signed up? Sign Up now!</string>
    <string name="btn_forgot_password">Forgot your password?</string>

    <string name="btn_create_event">Create event</string>
    <string name="btn_pick_date">Pick date</string>
    <string name="btn_pick_time">Pick time</string>

    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_change_email">Change Email</string>
    <string name="btn_change_password">Change Password</string>
    <string name="hint_old_password">Old password</string>
    <string name="btn_send_password_reset_email">Send Password reset email</string>

    <!-- Hints -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_firstname">Firstname</string>
    <string name="hint_lastname">Lastname</string>
    <string name="hint_new_email">New Email</string>
    <string name="hint_new_pass">New Password</string>
    <string name="hint_event_name">Event name</string>
    <string name="hint_event_description">Event description</string>
    <string name="hint_event_sport">Type of sport</string>
    <string name="hint_players_count">Players count</string>

    <!-- Drawer -->
    <!-- Navigation Drawer items -->
    <string name="drawer_home">Home</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_sign_in">Sign In</string>
    <string name="drawer_sign_up">Sign Up</string>
    <string name="drawer_sign_out">Sign Out</string>
    <string name="drawer_create_event">Create event</string>
    <string name="drawer_list_events">List events</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_events_section">Events</string>
    <string name="btn_join_event">Join</string>
    <string name="btn_edit_event">Edit</string>
    <string name="btn_leave_event">Leave</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="welcome_text">Welcome to</string>

    <string-array name="my_collections_dropdown">
        <item>My Collections</item>
        <item>Joined Events</item>
        <item>Created Events</item>
    </string-array>
</resources>
