<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.teamup.mihaylov.teamup.Events.EventDetails.EventDetailsActivity">

    <TextView
        android:id="@+id/event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/event_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_join_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_join_event"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_leave_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_leave_event"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_edit_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_edit_event"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:textStyle="bold"/>

</android.support.v7.widget.LinearLayoutCompat>
