<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teamup.mihaylov.teamup.Home.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:gravity="center"
            android:textSize="42dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/logo_image"
            android:layout_below="@+id/welcome_text"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="30dip"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/home_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_image"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/welcome_events_list_link"
            android:textSize="18dip"
            android:textColor="@color/colorAccent"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/moto_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/home_text"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/moto_text"
            android:textSize="26dip"
            android:textColor="@color/primary"
            android:textStyle="bold"/>

    </RelativeLayout>

</FrameLayout>
