<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBackground"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.teamup.mihaylov.teamup.Events.CreateEvent.CreateEventActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_event_name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_event_description"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_event_sport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_event_sport"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_players_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_players_count"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linear_layout">

        <LinearLayout
            android:id="@+id/pick_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <com.mikepenz.iconics.view.IconicsButton
                android:id="@+id/btn_pick_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:text="{gmd-date-range}"
                android:textColor="@color/colorPrimary"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/show_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/btn_pick_date"
                android:layout_toRightOf="@+id/btn_pick_date"
                android:textSize="16dp"
                android:inputType="date" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/pick_time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pick_date_layout"
            android:orientation="horizontal">

            <com.mikepenz.iconics.view.IconicsButton
                android:id="@+id/btn_pick_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:layout_below="@+id/btn_pick_date"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:text="{gmd-access-time}"
                android:textColor="@color/colorPrimary"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/show_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/show_date"
                android:layout_toRightOf="@+id/btn_pick_time"
                android:textSize="16dp"
                android:inputType="time" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pick_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pick_time_layout"
            android:orientation="horizontal">

            <com.mikepenz.iconics.view.IconicsButton
                android:id="@+id/btn_pick_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:text="{gmd-place}"
                android:textColor="@color/colorPrimary"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/input_show_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/btn_pick_location"
                android:layout_toRightOf="@+id/btn_pick_location"
                android:gravity="center|left"
                android:textSize="16dp"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_create_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_create_event"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>
